--- a/app/views/bikes/bike_fields/_revised_colors.html.haml
+++ b/app/views/bikes/bike_fields/_revised_colors.html.haml
@@ -1,7 +1,7 @@
 - classname ||= ''
 - bike ||= @bike
 
-- primary_color_help_content = "The color of the frame and fork&mdash;not the wheels, cranks, or anything else. You can put a more detailed description in paint description (once you've registered), <em>this</em> is to get a general color to make searching easier"
+- primary_color_help_content = t(".primary_color_help_content_html")
 - display_secondary_color = bike.secondary_frame_color_id.present?
 - display_tertiary_color = bike.tertiary_frame_color_id.present?
 
