--- a/app/views/bikes/edit_publicize.html.haml
+++ b/app/views/bikes/edit_publicize.html.haml
@@ -20,7 +20,7 @@
             %h3= @edit_templates[@edit_template]
 
           %h5.description
-            = t(".share_your_listing_so_everyone_knows_to_w", biketype: @bike.type)
+            = t(".share_your_listing_so_everyone_knows_to_w", bike_type: @bike.type)
 
           -# TODO: Consolidate social urls in helpers
           .no-divider-row.full-width-button.btn-share
