--- a/app/views/bikes/edit_alert_purchase.html.haml
+++ b/app/views/bikes/edit_alert_purchase.html.haml
@@ -7,8 +7,8 @@
         .form-wrap
           .form-well-form-header
             %h3.text-center.w-100
-              / 'alert'-prefixed templates should all have the same header and
-              / highlight the same nav menu item
+              -# 'alert'-prefixed templates should all have the same header and
+              -# highlight the same nav menu item
               = @edit_templates.select { |k, v| @edit_template.match(/#{k}/) }.values.first
 
           = form_tag theft_alerts_path,
@@ -26,11 +26,11 @@
               %h3.text-center.w-100
                 = t(".confirm_your_plan")
               .copy.text-center
-                = t(".youve_made_an_excellent_choice_please_con")
+                = t(".youve_made_an_excellent_choice")
             .row
               .copy.text-center
                 %strong
-                  = t(".here_is_what_youll_get_with_the_selected_", selected_theft_alert_planname: @selected_theft_alert_plan.name)
+                  = t(".here_is_what_youll_get", plan_name: @selected_theft_alert_plan.name)
             .row
               .description
                 = @selected_theft_alert_plan.description_html.html_safe
@@ -38,11 +38,12 @@
               .copy.text-center
                 %strong
                   - price = @selected_theft_alert_plan.amount_cents
-                  = t(".charge_number_to_currencyprice_1000_unit", number_to_currencyprice_1000_unit: number_to_currency(price / 100.0, unit: '$'))
+                  = t(".charge", price: number_to_currency(price / 100.0))
             .row
               .text-center.w-100.mt-2
                 %button.btn.btn-lg.btn-primary#js-confirm-plan-button
-                  = t(".check_confirm")
+                  &check;
+                  = t(".confirm")
 
                 = link_to edit_bike_path(@bike, page: :alert), method: :get do
                   %button.btn.btn-lg.btn-secondary
