--- a/app/views/bikes/edit_report_recovered.html.haml
+++ b/app/views/bikes/edit_report_recovered.html.haml
@@ -1,4 +1,5 @@
-/ Integrates with app/assets/javascripts/revised/pages/bikes/edit_stolen.coffee
+-# Integrates with app/assets/javascripts/revised/pages/bikes/edit_stolen.coffee
+
 = form_for @bike, multipart: true, html: { class: "primary-edit-bike-form stolenEditPage" } do |f|
   = f.hidden_field :stolen
 
@@ -14,18 +15,18 @@
               %h3= @edit_templates[@edit_template]
             .no-divider-row.full-width-button
               %a.btn.btn-success.btn-lg{data: { toggle: "modal", target: "#toggle-stolen" } }
-                = t(".this_biketype_has_been_returned", biketype: @bike.type)
+                = t(".this_bike_has_been_returned", bike_type: @bike.type)
 
 
-- modal_title = "We're so glad you got your #{@bike.type} back!"
+- modal_title = t(".were_so_glad", bike_type: @bike.type)
 
 - alert_body = capture_haml do
-  %p= t(".please_tell_us_how_you_got_your_biketype_", biketype: @bike.type)
+  %p= t(".please_tell_us_how_you_got_your_bike", bike_type: @bike.type)
   %p= t(".its_how_we_get_better_at_recovering_bikes")
 
 - modal_body = capture_haml do
   .modal-body
-    = render partial: 'shared/alert', locals: { body: alert_body, title: 'Not enough information!', class_names: 'currently-hidden' }
+    = render partial: 'shared/alert', locals: { body: alert_body, title: t(".not_enough_info"), class_names: 'currently-hidden' }
     = form_tag do |t|
       = hidden_field_tag :mark_recovered_bike_id, @bike.id
       = hidden_field_tag :mark_recovered_stolen_record_id, (@bike.current_stolen_record_id if @bike.current_stolen_record_id.present?)
@@ -49,5 +50,6 @@
             %button.btn.btn-secondary{ 'data-dismiss' => 'modal', type: 'button' }
               = t(".nevermind")
 
-/ Only one modal if stolen, only one (different) modal if not stolen
+-# Only one modal if stolen, only one (different) modal if not stolen
+
 = render partial: "shared/modal", locals: { title: modal_title, id: "toggle-stolen", modal_body: modal_body }
