--- a/app/views/theft_alert_plans/_theft_alert_plan.html.haml
+++ b/app/views/theft_alert_plans/_theft_alert_plan.html.haml
@@ -16,7 +16,7 @@
         %strong= theft_alert_plan.duration_days
         Days
       .detail-card-subtitle.detail-card-price
-        = number_to_currency(theft_alert_plan.amount_cents / 100.0, unit: "$")
+        = number_to_currency(theft_alert_plan.amount_cents / 100.0)
     .detail-card-content-main
       = theft_alert_plan.description_html.html_safe
     .detail-card-subtitle.detail-card-footer.js-plan-select{ |
